--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,119 @@ body {
   /* overflow-x: hidden; */
 }
 
+
+
+
+
+
+/* =================telefon========== */
+.telefon{
+    width: 50%;
+    background-color: #fff;
+    height: 100vh;
+    position: fixed;
+    z-index: 10;
+   right: 0;
+   padding:15px 10px;
+   display: none;
+    top: 0;
+   right: -50%;
+   transition: all 0.5s; 
+}
+.active{
+    right: 0;
+}
+.telefon_header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 0;  
+    border-bottom: 1px solid #002147;
+}
+
+.telefon_close {
+    position: relative;
+    width: 30px;
+    height: 30px; 
+    cursor: pointer;
+  }
+
+  .telefon_close span {
+    position: absolute;
+    width: 100%; 
+    height: 3px;
+    background-color: black;
+    top: 50%; 
+    transition: all 0.3s ease;
+  }
+.telefon_close span:nth-child(1){
+    transform: rotate(-45deg);
+  }
+.telefon_close span:nth-child(2){
+  transform: rotate(45deg);
+}
+
+/* ==============telefon menu========== */
+.telefon_menu{
+    width: 97%;
+    padding: 15px;
+}
+.telefon_select{
+    /* display: flex; */
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+}
+.telefon_select p{
+    display: flex;
+    justify-content: space-between  ;
+    align-items: center;
+    color: #2eca7f ;
+    text-transform: capitalize;
+    padding: 15px ;
+}
+.telefon_active ul{
+    display: block;
+}
+
+/* telefon select=========== */
+.telefon_cust{
+    position: relative;
+    padding: 0 5px;
+    display: none;
+}
+.telefon_select:hover .telefon_cust{
+    display: block;
+}
+.telefon_options li{
+  padding: 5px 0;
+}
+   
 /* ==================header ================== */
 
+/* ========================header burger========================== */
+.burger{
+    width: 40px;
+    height: 40px;
+    z-index: 5;
+    position: relative;
+   
+}
+
+.burger span{
+    position: absolute;
+    width: 100%; 
+    height: 3px;
+    background-color: #fff;
+}
+
+.burger span:nth-child(2){
+    margin: 10px 0;
+}
+.burger span:nth-child(3){
+    margin: 20px 0;
+}
+/* ==========header start========== */
 .header {
   width: 100%;
   position: fixed;
@@ -72,8 +183,11 @@ body {
   font-size: 16px;
 }
 
-.header_menu ul,
+.header_menu li, a:hover{
+ color: #2eca7f;
+}
 a {
+    transition: all 0.5s;
   color: #ffffff;
 }
 .header_color a {
@@ -106,17 +220,17 @@ a {
 }
 
 /* =================header bg ==========*/
-.header_bg {
+.header_hom {
   position: relative;
 }
 
 
-.header_bg img {
+.header_hom img {
   width: 100%;
   object-fit: cover;
 }
 
-.header_bgtext {
+.header_homtext {
   width: 700px;
   margin: 0 auto;
   position: absolute;
@@ -128,13 +242,13 @@ a {
   text-align: center;
 }
 
-.header_bgtext p:nth-child(1) {
+.header_homtext p:nth-child(1) {
   font-family: 'Lexend-VariableFont_wght';
   color: #fff;
   font-size: 28px;
 }
 
-.header_bgtext h1 {
+.header_homtext h1 {
   color: #fff;
   font-family: 'Lexend', sans-serif;
   font-size: 90px;
@@ -147,7 +261,7 @@ a {
   margin-bottom: 30px;
 }
 
-.header_bgbtn {
+.header_hombtn {
   width: 500px;
   margin: 0 auto;
   position: absolute;
@@ -159,7 +273,7 @@ a {
 }
 
 
-.header_bgbtn_1 {
+.header_hombtn_1 {
   margin-right: 20px;
   background-color: #2eca7f;
   color: #fff;
@@ -170,7 +284,7 @@ a {
   border-radius: 40px;
 }
 
-.header_bgbtn_2 {
+.header_hombtn_2 {
   color: #002147;
   font-family: 'Lexend', sans-serif;
   font-size: 16px;
@@ -179,7 +293,7 @@ a {
   border-radius: 40px;
 }
 
-.header_bgbtn_1  :hover {
+.header_hombtn_1  :hover {
   background-color: #002147;
 }
 
@@ -208,6 +322,7 @@ a {
 .header_drob {
     position: relative;
 }
+
 .custom_select{
     padding-top:50px ;
     display: none;
@@ -222,17 +337,19 @@ a {
     background-color:#f5f2f2;
     border: 1px solid #ccc;
     width: 300px;
-    padding: 15px 50px;
+    padding: 15px 60px;
     /* display: none; Select dastlab yashiringan */
     flex-direction: column; /* Flex elementlarni vertikal joylashtirish */
     z-index: 10;    
     color: #002147;
     transition: all 0.5s;
+
 }
 .options li{
     border-bottom: 1px dashed ;
     padding-bottom: 10px ;
   color: #7a7a7a;
+  font-size: 14px;
   cursor: pointer;
 }
 
