--- a/css/main.css
+++ b/css/main.css
@@ -14,120 +14,179 @@
 }
 
 body {
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
-
-
-
-
+/* ====================cover============= */
+.cover {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  background-color: black;
+  opacity: 50%;
+  z-index: 4;
+  display: none;
+  transition: all 0.5s;
+}
+.cover_active {
+  display: block;
+}
 
 /* =================telefon========== */
-.telefon{
-    width: 50%;
-    background-color: #fff;
-    height: 100vh;
-    position: fixed;
-    z-index: 10;
-   right: 0;
-   padding:15px 10px;
-   display: none;
-    top: 0;
-   right: -50%;
-   transition: all 0.5s; 
+.telefon {
+  width: 50%;
+  background-color: #fff;
+  height: 100vh;
+  position: fixed;
+  z-index: 10;
+  padding: 15px 10px;
+  top: 0;
+  right: -50%;
+  transition: all 0.5s;
+  overflow-y: auto;
 }
-.active{
-    right: 0;
+.active {
+  right: 0;
 }
-.telefon_header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 0;  
-    border-bottom: 1px solid #002147;
+
+.telefon_img img {
+  width: 80px;
+}
+.telefon_header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 0;
+  border-bottom: 1px solid #002147;
 }
 
 .telefon_close {
-    position: relative;
-    width: 30px;
-    height: 30px; 
-    cursor: pointer;
-  }
+  position: relative;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
 
-  .telefon_close span {
-    position: absolute;
-    width: 100%; 
-    height: 3px;
-    background-color: black;
-    top: 50%; 
-    transition: all 0.3s ease;
-  }
-.telefon_close span:nth-child(1){
-    transform: rotate(-45deg);
-  }
-.telefon_close span:nth-child(2){
+.telefon_close span {
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background-color: #7a7a7a;
+  top: 50%;
+  transition: all 0.3s ease;
+}
+.telefon_close span:nth-child(1) {
+  transform: rotate(-45deg);
+}
+.telefon_close span:nth-child(2) {
   transform: rotate(45deg);
 }
 
 /* ==============telefon menu========== */
-.telefon_menu{
-    width: 97%;
-    padding: 15px;
+.telefon_menu {
+  width: 97%;
+  padding: 15px;
+  border-bottom: 2px solid #7a7a7a;
 }
-.telefon_select{
-    /* display: flex; */
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
+.telefon_select {
+  /* display: flex; */
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
 }
-.telefon_select p{
-    display: flex;
-    justify-content: space-between  ;
-    align-items: center;
-    color: #2eca7f ;
-    text-transform: capitalize;
-    padding: 15px ;
+.telefon_select p {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #002147;
+  text-transform: capitalize;
+  padding: 15px;
+  font-family: 'Lexend-VariableFont_wght';
+  font-size: 16px;
 }
-.telefon_active ul{
-    display: block;
+.telefon_color p {
+  color: #2eca7f;
+}
+.telefon_active ul {
+  display: block;
 }
 
 /* telefon select=========== */
-.telefon_cust{
-    position: relative;
-    padding: 0 5px;
-    display: none;
+.telefon_cust {
+  position: relative;
+  padding: 0 5px;
+  display: none;
 }
-.telefon_select:hover .telefon_cust{
-    display: block;
+.telefon_select:hover .telefon_cust {
+  display: block;
 }
-.telefon_options li{
+.telefon_options li {
   padding: 5px 0;
 }
-   
+.telefon_cust {
+}
+.telefon_options li {
+  padding: 5px 0;
+  font-family: 'Lexend-VariableFont_wght';
+  font-size: 16px;
+  color: #7a7a7a;
+  cursor: pointer;
+}
+
+.telefon_contact h4 {
+  font-family: 'Lexend-VariableFont_wght';
+  font-size: 22px;
+  color: #002147;
+  padding: 20px;
+}
+.telefon_contact li {
+  padding: 10px;
+}
+
+.telefon_contact li,
+span {
+  font-family: 'Lexend-VariableFont_wght';
+  font-size: 16px;
+  color: #002147;
+}
+.telofon_icon {
+  color: #2eca7f;
+  padding-left: 10px;
+}
+
+.telefon_btn button {
+  padding: 20px 30px;
+  border-radius: 40px;
+  font-family: 'Lexend-VariableFont_wght';
+  font-size: 16px;
+  color: #fff;
+  background-color: #2eca7f;
+  border: none;
+  margin-left: 10px;
+}
 /* ==================header ================== */
 
 /* ========================header burger========================== */
-.burger{
-    width: 40px;
-    height: 40px;
-    z-index: 5;
-    position: relative;
-   
+.burger {
+  width: 30px;
+  height: 30px;
+  z-index: 5;
+  position: relative;
+  display: none;
 }
 
-.burger span{
-    position: absolute;
-    width: 100%; 
-    height: 3px;
-    background-color: #fff;
+.burger span {
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background-color: #fff;
 }
 
-.burger span:nth-child(2){
-    margin: 10px 0;
+.burger span:nth-child(2) {
+  margin: 10px 0;
 }
-.burger span:nth-child(3){
-    margin: 20px 0;
+.burger span:nth-child(3) {
+  margin: 20px 0;
 }
 /* ==========header start========== */
 .header {
@@ -146,14 +205,18 @@ body {
   align-items: center;
   justify-content: space-between;
   padding: 10px 10px;
-
 }
 
 /* ===========js====== */
 .active_bg {
   width: 100%;
   background-color: #ffffff;
-
+}
+.header_logo img {
+  width: 80px;
+  background-color: #fff;
+  border-radius: 50%;
+  object-fit: cover;
 }
 /* =============js============ */
 .active_li a {
@@ -183,11 +246,12 @@ body {
   font-size: 16px;
 }
 
-.header_menu li, a:hover{
- color: #2eca7f;
+.header_menu li,
+a:hover {
+  color: #2eca7f;
 }
 a {
-    transition: all 0.5s;
+  transition: all 0.5s;
   color: #ffffff;
 }
 .header_color a {
@@ -219,11 +283,12 @@ a {
   font-size: 30px;
 }
 
-/* =================header bg ==========*/
+/* =========================header and================ */
+
+/* =================header hom ==========*/
 .header_hom {
   position: relative;
 }
-
 
 .header_hom img {
   width: 100%;
@@ -262,7 +327,7 @@ a {
 }
 
 .header_hombtn {
-  width: 500px;
+  max-width: 500px;
   margin: 0 auto;
   position: absolute;
   z-index: 3;
@@ -271,7 +336,6 @@ a {
   transform: translate(-50%, -50%);
   text-align: center;
 }
-
 
 .header_hombtn_1 {
   margin-right: 20px;
@@ -293,11 +357,53 @@ a {
   border-radius: 40px;
 }
 
-.header_hombtn_1  :hover {
+.header_hombtn_1:hover {
   background-color: #002147;
 }
 
+/* ===========header custem select =============== */
+
+.header_drob {
+  position: relative;
+}
+
+.custom_select {
+  padding-top: 50px;
+  display: none;
+}
+
+.options {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #f5f2f2;
+  border: 1px solid #ccc;
+  width: 300px;
+  padding: 15px 60px;
+  /* display: none; Select dastlab yashiringan */
+  flex-direction: column; /* Flex elementlarni vertikal joylashtirish */
+  z-index: 10;
+  color: #002147;
+  transition: all 0.5s;
+}
+.options li {
+  border-bottom: 1px dashed;
+  padding-bottom: 10px;
+  color: #7a7a7a;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.header_drob:hover .custom_select {
+  display: block;
+}
+.options li:hover {
+  color: black;
+}
+/*  ===================header hom and======================= */
+
 /* ===========================About qismi =========================*/
+
 .about {
   width: 1587px;
   background-color: #ffffff;
@@ -317,45 +423,27 @@ a {
   border-radius: 5px;
 }
 
-/* ===========header custem select =============== */
+/* ==========================slaider=================== */
 
-.header_drob {
-    position: relative;
+.slider {
+  width: 100%;
+  background-color: #002147;
+  padding: 80px 0 110px 0;
 }
 
-.custom_select{
-    padding-top:50px ;
-    display: none;
-
+.slider_text {
+  text-align: center;
 }
 
-
-.options {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background-color:#f5f2f2;
-    border: 1px solid #ccc;
-    width: 300px;
-    padding: 15px 60px;
-    /* display: none; Select dastlab yashiringan */
-    flex-direction: column; /* Flex elementlarni vertikal joylashtirish */
-    z-index: 10;    
-    color: #002147;
-    transition: all 0.5s;
-
-}
-.options li{
-    border-bottom: 1px dashed ;
-    padding-bottom: 10px ;
+.slider_text p:nth-child(1) {
+    font-family: 'Lexend', sans-serif;
   color: #7a7a7a;
-  font-size: 14px;
-  cursor: pointer;
+  font-size: 20px;
+  text-transform: uppercase;
 }
 
-.header_drob:hover .custom_select{
-    display: block;
-}
-.options li:hover{
-    color: black;
+.slider_text p:nth-child(2){
+    color: #fff ;
+    font-size: 48px;
+    font-family: 'Lexend', sans-serif;
 }
