--- a/css/main.css
+++ b/css/main.css
@@ -425,25 +425,83 @@ a {
 
 /* ==========================slaider=================== */
 
-.slider {
+.slidere {
   width: 100%;
   background-color: #002147;
   padding: 80px 0 110px 0;
+  position: relative;
+  border: 1px solid red;
 }
 
 .slider_text {
   text-align: center;
+
 }
 
 .slider_text p:nth-child(1) {
-    font-family: 'Lexend', sans-serif;
+  font-family: 'Lexend', sans-serif;
   color: #7a7a7a;
   font-size: 20px;
   text-transform: uppercase;
 }
 
-.slider_text p:nth-child(2){
-    color: #fff ;
-    font-size: 48px;
+.slider_text p:nth-child(2) {
+  color: #fff;
+  font-size: 48px;
+  font-family: 'Lexend', sans-serif;
+}
+.item_img img{
+    width: 750px;
+}
+.item_text{
+    position: absolute;
+    top: 100px;
+    left: 20px;
+    background-color: #fff;
+    color: black;
+    text-transform: uppercase;
+    padding: 10px;
+    font-size: 40px;
     font-family: 'Lexend', sans-serif;
+}
+.item_btn button{
+    position: absolute;
+    top: 180px;
+    left: 20px;
+    background-color: #2eca7f;
+    padding: 20px 35px;
+    font-family: 'Lexend', sans-serif;
+    color: #fff;
+    font-size: 13px;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 40px;
+
+}
+.item_btn button:hover{
+    background-color: #002147;
+}
+/* ===========owl carusel========= */
+
+.slider_img {
+  position: absolute;
+  overflow: hidden;
+  animation: scroll 20s linear infinite;
+  top: 250px;
+  border: 2px solid red;
+}
+
+@keyframes  scroll{
+    0% {
+        transform: translateX(0); 
+      }
+      25% {
+        transform: translateX(25%); 
+      }
+      50% {
+        transform: translateX(50%); 
+      }
+      100%{
+        transform: translateX(-300%); 
+      }
 }
